Fix top of page being cut off on small screens

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 
 html,
 body {
-	height: 100%;
+	min-height: 100vh;
 	width: 100%;
 	margin: 0;
 }
